--- a/vertical-timeline/css/style.css
+++ b/vertical-timeline/css/style.css
@@ -357,6 +357,149 @@ Interests block
 
 /* -------------------------------- 
 
+Types
+
+-------------------------------- */
+.rec-block{
+  
+  margin: 0 auto;
+ 
+}
+.socionics{
+  margin: 0 auto;
+  padding: 20px 10px 20px 10px;
+  width: 90%;
+}
+
+.soc-line-name{
+  padding: 0 0 10px 0;
+  /*margin-left: 10%;*/
+  display: inline-block;
+  margin-bottom: 10px;
+}
+.type{
+  width: 100%;
+  text-align: left;
+}
+
+.soc-line-selfname{
+  /*height: 25px;*/
+  background-color: #fff;
+  padding: 0 0 2px 0;
+}
+
+.soc-line-selfname img{
+  width: 23px;
+  padding: 2px 2px 0 2px;
+}
+.soc-ego-block{
+  /*display: table;*/
+   display: table;
+  margin: 0 auto;
+  /*display: inline-block;*/
+  height: 100%;
+  vertical-align: middle;
+  /* width: 90%;*/
+}
+.soc-kid-block{
+  display: table;
+  margin: 0 auto;
+  height: 100%;
+  vertical-align: middle;
+}
+.soc-ego-text{
+  /*display: inline-block;*/
+  border: 1px solid #898383;
+  width: 700px;
+  border-radius: 10px;
+  padding: 5px 5px 5px 5px;
+  float: left;
+  line-height: 1.5;
+  text-align: justify;
+  margin-left: 3px;
+  /*height: 100%;*/
+ /* margin-top: 15px;*/
+
+
+}
+.soc-ego-img{
+  width: 30%;
+  float: left;
+  max-width: 160px;
+  vertical-align: middle;
+  margin-top: -5px;
+/*  top: 50%; */
+
+}
+
+/**
+ * Tooltip Styles
+ */
+
+/* Add this attribute to the element that needs a tooltip */
+[data-tooltip] {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
+  position: absolute;
+  bottom: 150%;
+  left: 50%;
+  margin-bottom: 5px;
+  margin-left: -80px;
+  padding: 7px;
+  width: 160px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+/* Triangle hack to make tooltip look like a speech bubble */
+[data-tooltip]:after {
+  position: absolute;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+/* -------------------------------- 
+
 Modules - reusable parts of our design
 
 -------------------------------- */
