--- a/InfoGraphicsEmpForm/vertical-timeline/css/style.css
+++ b/InfoGraphicsEmpForm/vertical-timeline/css/style.css
@@ -505,7 +505,7 @@ Types
 .ps-text{
   padding: 2px 5px 5px 5px;
   font-size: 14px;
-  text-align: justify;
+  text-align: center;
 }
 .func{
   display: inline-block;
